[build-system]
requires = ["setuptools","Cython", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darmonpoints"
version = "7.0.1"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
description = "Compute non-archimedean Darmon points"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
passagemath = [
    "passagemath-flint",
    "passagemath-groups",
    "passagemath-modules",
    "passagemath-pari",
    "passagemath-plot",
    "passagemath-repl",
    "passagemath-schemes",
    "passagemath-symbolics",
]

[tool.setuptools]
packages = [
    "darmonpoints",
]
