[build-system]
requires = ["setuptools","Cython", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darmonpoints"
version = "8.0.3"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
description = "Compute non-archimedean Darmon points"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = [
    "darmonpoints",
]
